--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,11 @@
-<h1>Login</h1>
+<h3> <i class="fas fa-book-reader"> </i> Story Hub</h3>
+<div class="section">
+    <p class="lead">Share your public and private story heare</p>
+</div>
+<div class="driver"></div>
+<div class="section">
+    <a href="/auth/google" class="btn red darken-1">
+    <i class="fab fa-google left"></i> Login with Google
+
+    </a>
+</div>
