--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,13 +20,18 @@
     <title>Story Hub</title>
   </head>
   <body>
-    <div class="container">
 
+    {{> _header}}
+    <div class="container">
       {{{body}}}
     </div>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"
     ></script>
+
+    <script>
+      M.Sidenav.init(document.querySelector(".sidenav"))
+    </script>
   </body>
 </html>
