--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,1 +1,31 @@
-<h1>Dashboard</h1>
+<h6>Dashboard</h6>
+<h3>Welcome, {{name}} <i class="fas fa-pen"></i> </h3>
+<p>Here are your story that you shared</p>
+
+{{#if stories}}
+    <table class="striped">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Date</th>
+                <th>Status</th>
+                <th></th>
+            </tr>
+        </thead>
+
+        <tbody>
+            {{#each stories}}
+                <tr>
+                    <td><a href="/stories/{{_id}}"></a>{{title}}</td>
+                    <td>{{createdOn}}</td>
+                    <td><span class="dash-status">{{status}}</span></td>
+                    <td>Delete</td>
+                </tr>
+            {{/each}}
+        </tbody>
+    </table>
+
+{{else}}
+<h5 class="red">You have not created any stories</h5>
+
+{{/if}}
