--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,6 +22,8 @@
   <body>
 
     {{> _header}}
+    {{> _add_btn}}
+   
     <div class="container">
       {{{body}}}
     </div>
@@ -29,9 +31,15 @@
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.20.2/ckeditor.js" integrity="sha512-abfAV2gASfr4b8JYZfgEO6rByKHbXqfHIIQ2QWI/Z8L2XB3MVZhlY8Oy52C6mZbugZBPnzAz7c7RLlYwZT5DBA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script>
       M.Sidenav.init(document.querySelector(".sidenav"))
+      M.FormSelect.init(document.querySelector("#status"))
+
+      CKEDITOR.replace("body", {
+        plugins: "wysiwygarea, toolbar, basicstyles, link"
+      })
     </script>
   </body>
 </html>
