--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -17,7 +17,7 @@
             {{#each stories}}
                 <tr>
                     <td><a href="/stories/{{_id}}"></a>{{title}}</td>
-                    <td>{{createdOn}}</td>
+                    <td>{{formatDate createdOn "Do MMMM  YYYY, h:mm:ss a"}}</td>
                     <td><span class="dash-status">{{status}}</span></td>
                     <td>Delete</td>
                 </tr>
