--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -16,7 +16,7 @@
         <tbody>
             {{#each stories}}
                 <tr>
-                    <td><a href="/stories/{{_id}}"></a>{{title}}</td>
+                    <td><a href="/stories/{{_id}}">{{title}}</a></td>
                     <td>{{formatDate createdOn "Do MMMM  YYYY, h:mm:ss a"}}</td>
                     <td><span class="dash-status">{{status}}</span></td>
                     <td>Delete</td>
