--- a/views/stories/index.hbs
+++ b/views/stories/index.hbs
@@ -1,7 +1,7 @@
 <h1>Stories</h1>
 <ul class="search-form">
     <li>    
-        <form id="search-site"  action='/stories/search/:query' method='get'>
+        <form id="search-site"  action='' method='get'>
             <div class="input-group">
                     <i class="fas fa-search fa-large" ></i>
                     <div class="input-field">
