--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,13 +1,13 @@
-<nav class="grey darken-3">
+<nav class="black darken-3">
   <div class="nav-wrapper container">
-    <a href="/" class="brand-logo center">Story Hub</a>
+    <a href="/" class="brand-logo center" style="font-weight: 600; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Story Hub</a>
     <a href="/" data-target="mobile-demo" class="sidenav-trigger show-on-large">
       <i class="fas fa-bars"></i>
     </a>
-    <ul class="sidenav" id="mobile-demo">
-      <li><a href="/stories">Public Stories</a></li>
-      <li><a href="/dashboard">Dashboard</a></li>
-      <li><a href="/auth/logout">Logout</a></li>
+    <ul class="sidenav" id="mobile-demo" style="background-color: #000000; margin-top: 60px;">
+      <li><a style="color: white;" href="/stories">Public Stories</a></li>
+      <li><a style="color: white;" href="/dashboard">Dashboard</a></li>
+      <li><a style="color: white;" href="/auth/logout">Logout</a></li>
     </ul>
   </div>
 </nav>
