--- a/views/stories/show.hbs
+++ b/views/stories/show.hbs
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="col s12 m4">
-        <div class="card center-align">
+        <div class="card center-align" style="margin-top: 95px;">
             <div class="card-content">
                 <span class="card-title">{{story.user.displayName}}</span>
                 <img src="{{story.user.image}}" class="circle responsive-img img-small">
