login page modified

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
-<h3> <i class="fas fa-book-reader"> </i> Story Hub</h3>
+<h3 style="font-weight: 600; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"> <i class="fas fa-book-reader" > </i> Story Hub</h3>
 <div class="section">
-    <p class="lead">Share your public and private story heare</p>
+    <p style="font-weight: 500; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Share your public and private story here</p>
 </div>
 <div class="driver"></div>
 <div class="section">
